fix: fixes mobile menu having the wrong margin in pwa

--- a/assets/main.css
+++ b/assets/main.css
@@ -133,3 +133,7 @@ body {
   padding-left: env(safe-area-inset-left);
   padding-right: env(safe-area-inset-right);
 }
+
+nav {
+  padding-top: env(safe-area-inset-top);
+}
